--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "ai": "^2.2.27",
-    "baserun": "/Users/timsuchanek/code/baserun-js/baserun-2.0.2-alpha.1.tgz",
+    "baserun": "^2.0.1",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18"
