--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "ai": "^2.2.27",
     "baserun": "2.0.2",
-    "next": "14.0.3",
+    "next": "^14.0.4-canary.35",
     "react": "^18",
     "react-dom": "^18"
   },
