--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "ai": "^2.2.27",
-    "baserun": "2.0.2",
-    "next": "^14.0.4-canary.35",
+    "baserun": "2.1.1",
+    "next": "^14.0.4",
     "react": "^18",
     "react-dom": "^18"
   },
